# Vera

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  shell.nix
assets/: Vera.desktop
docs/: choice.md  exiv2.md
images/: README.md
src/: app_controller.rs  dialogs.rs  main.rs
src/processing/: batch_operations.rs  exiv2_backend.rs  geo_utils.rs  mod.rs
ui/: main.slint
